--- a/php-course/associative.html
+++ b/php-course/associative.html
@@ -2,68 +2,173 @@
 <html lang="en">
 	<head>	
 		<title>Learn PHP</title>	
-		<script src="../js/jquery.min.js"></script> <!-- jquery libraries -->
-		<script src="../js/handlebars-v3.0.3.js"></script> <!-- handlebars libraries -->
-		<script src="../js/bootstrap.min.js"></script> <!-- bootstrap libraries -->
-		<link href="../css/bootstrap_blue.css" rel="stylesheet"> <!-- bootstrap styling -->	
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->	
+		<script src="../js/jquery.min.js"></script>
+		<script src="../js/handlebars-v3.0.3.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
+		<script src="../js/date.js"></script>
+		<link rel="stylesheet" href="../css/bootstrap_plain.css">
+		<link rel="stylesheet" href="../css/styles.css">
 	</head>
 	
 	<body>
-		<div id="container">
-			<div class="row">
-				<div class="col-md-2">
-					<div id="content_left">
-						<ul class="nav nav-pills nav-stacked nav-pills-stacked-example">
-							<li><a href="introduction.html">Introduction to PHP</a></li>
-							<li><a href="strings.html">PHP Strings and Variables</a></li>
-							<li><a href="numbers.html">PHP Numbers</a></li>
-							<li><a href="functions.html">Introduction to PHP Functions</a></li>
-							<li><a href="builtin.html">Intro to Built-in PHP Functions</a></li>
-							<li><a href="ordered.html">Ordered Arrays</a></li>
-							<li class="active"><a href="associative.html">Associative Arrays</a></li>
-							<li><a href="html.html">PHP and HTML</a></li>
-							<li><a href="form.html">HTML Form Handling in PHP</a></li>
-							<li><a href="comparison.html">Booleans and Comparison Operators</a></li>
-							<li><a href="conditions.html">Logical Operators and Compound Conditions</a></li>
-							<li><a href="loops.html">Loops</a></li>
-							<li><a href="loops2.html">Loops in HTML</a></li>
-							<li><a href="validation.html">Introduction to Form Validation</a></li>
-							<li><a href="regex.html">Introduction to Regular Expressions</a></li>
-							<li><a href="validation2.html">Introduction to PHP Form Validation</a></li>
-							<li><a href="classes.html">Classes and Objects</a></li>
-							<li><a href="../index.html">&larr; Back to Courses</a></li>
-						</ul>
-					</div>
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle Navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<h1><a class="navbar-brand" href="../index.html">Codecademy Courses</a></h1>
 				</div>
-				<div class="col-md-10">
-					<div id="content_right">
-						<h1>Learn PHP</h1>
-						<h2>Associative Arrays</h2>
-						<h3>Review</h3>
-						<p>You learned so much in this lesson! Let’s review:</p>
-						<ul>
-							<li><em>Associative arrays</em> are data structures in which string or integer <em>keys</em> are associated with <em>values</em>.</li>
-							<li>We use the => operator to associate a key with its value. $my_array = ["panda"=>"very cute"]</li>
-							<li>To print an array’s keys and their values, we can use the print_r() function.</li>
-							<li>We access the value associated with a given key by using square brackets ([]). For example: $my_array["panda"] will return "very cute".</li>
-							<li>We can assign values to keys using this same indexing syntax and the assignment operator (=): $my_array["dog"] = "good cuteness";</li>
-							<li>This same syntax can be used to change existing elements. $my_array["dog"] = "max cuteness";</li>
-							<li>We can remove a <em>key=>value</em> pair entirely using the PHP unset() function.</li>
-							<li>Keys can be integers. In fact, ordered arrays are just arrays in which integer keys have been assigned to the values automatically.</li>
-							<li>In PHP, associative arrays and ordered arrays are different uses of the same data type.</li>
-							<li>The union (+) operator takes two array operands and returns a new array with any unique keys from the second array appended to the first array.</li>
-							<li>When writing function with array parameters, we can pass the array by value or by reference depending on our intent.</li>
-						</ul>
-						<p>Awesome work!</p>
-					</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Command Line&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../command-line-course/navigating.html">Navigating the File System</a></li>
+								<li><a href="../command-line-course/viewing.html">Viewing and Changing the File System</a></li>
+								<li><a href="../command-line-course/redirecting.html">Redirecting Input and Output</a></li>
+								<li><a href="../command-line-course/configuring.html">Configuring the Environment</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">HTML&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../html-course/introduction.html">Introduction to HTML</a></li>
+								<li><a href="../html-course/standards.html">HTML Document Standards</a></li>
+								<li><a href="../html-course/tables.html">Tables</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CSS&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../css-course/selectors.html">CSS Setup and Selectors</a></li>
+								<li><a href="../css-course/rules.html">CSS Visual Rules</a></li>
+								<li><a href="../css-course/model.html">The Box Model</a></li>
+								<li><a href="../css-course/changing.html">Changing the Box Model</a></li>
+								<li><a href="../css-course/display.html">CSS Display and Positioning</a></li>
+								<li><a href="../css-course/color.html">CSS Color</a></li>
+								<li><a href="../css-course/typography.html">CSS Typography</a></li>
+								<li><a href="../css-course/grid.html">CSS Grid Essentials</a></li>
+								<li><a href="../css-course/advanced.html">Advanced CSS Grid</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">JavaScript&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../javascript-course/introduction.html">Introduction</a></li>
+								<li><a href="../javascript-course/variables.html">Variables</a></li>
+								<li><a href="../javascript-course/controlflow.html">Control Flow</a></li>
+								<li><a href="../javascript-course/functions.html">Functions</a></li>
+								<li><a href="../javascript-course/scope.html">Scope</a></li>
+								<li><a href="../javascript-course/arrays.html">Arrays</a></li>
+								<li><a href="../javascript-course/loops.html">Loops</a></li>
+								<li><a href="../javascript-course/iterators.html">Iterators</a></li>
+								<li><a href="../javascript-course/objects.html">Objects</a></li>
+								<li><a href="../javascript-course/classes.html">Classes</a></li>
+								<li><a href="../javascript-course/browser.html">Browser Compatibility and Transpilation</a></li>
+								<li><a href="../javascript-course/modules.html">Modules</a></li>
+								<li><a href="../javascript-course/request1.html">Requests I</a></li>
+								<li><a href="../javascript-course/request2.html">Requests II</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PHP&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="introduction.html">Introduction to PHP</a></li>
+								<li><a href="strings.html">PHP Strings and Variables</a></li>
+								<li><a href="numbers.html">PHP Numbers</a></li>
+								<li><a href="functions.html">Introduction to PHP Functions</a></li>
+								<li><a href="builtin.html">Intro to Built-in PHP Functions</a></li>
+								<li><a href="ordered.html">Ordered Arrays</a></li>
+								<li class="active"><a href="associative.html">Associative Arrays</a></li>
+								<li><a href="html.html">PHP and HTML</a></li>
+								<li><a href="form.html">HTML Form Handling in PHP</a></li>
+								<li><a href="comparison.html">Booleans and Comparison Operators</a></li>
+								<li><a href="conditions.html">Logical Operators and Compound Conditions</a></li>
+								<li><a href="loops.html">Loops</a></li>
+								<li><a href="loops2.html">Loops in HTML</a></li>
+								<li><a href="validation.html">Introduction to Form Validation</a></li>
+								<li><a href="regex.html">Introduction to Regular Expressions</a></li>
+								<li><a href="validation2.html">Introduction to PHP Form Validation</a></li>
+								<li><a href="classes.html">Classes and Objects</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SQL&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../sql-course/manipulation.html">Manipulation</a></li>
+								<li><a href="../sql-course/queries.html">Queries</a></li>
+								<li><a href="../sql-course/functions.html">Aggregate Functions</a></li>
+								<li><a href="../sql-course/tables.html">Multiple Tables</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Java&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../java-course/hello.html">Hello World</a></li>
+								<li><a href="../java-course/variables.html">Variables</a></li>
+								<li><a href="../java-course/manipulating.html">Manipulating Variables</a></li>
+								<li><a href="../java-course/classes.html">Introduction to Classes</a></li>
+								<li><a href="../java-course/methods.html">Methods</a></li>
+								<li><a href="../java-course/conditionals.html">Conditionals and Control Flow</a></li>
+								<li><a href="../java-course/operators.html">Conditional Operators</a></li>
+								<li><a href="../java-course/arrays.html">Arrays</a></li>
+								<li><a href="../java-course/arraylists.html">ArrayLists</a></li>
+								<li><a href="../java-course/loops.html">Loops</a></li>
+								<li><a href="../java-course/string.html">String Methods</a></li>
+								<li><a href="../java-course/inheritance.html">Inheritance and Polymorphism</a></li>
+								<li><a href="../java-course/debugging.html">Debugging</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../resources.html#command-line-resources">Command Line</a></li>
+								<li><a href="../resources.html#html-resources">HTML</a></li>
+								<li><a href="../resources.html#css-resources">CSS</a></li>
+								<li><a href="../resources.html#javascript-resources">JavaScript</a></li>
+								<li><a href="../resources.html#php-resources">PHP</a></li>
+								<li><a href="../resources.html#sql-resources">SQL</a></li>
+								<li><a href="../resources.html#java-resources">Java</a></li>
+							</ul>
+						</li>
+					</ul>
 				</div>
-            </div>
+			</div>
+		</nav>
+		
+		<div class="container">
+			<ol class="breadcrumb">
+				<li>PHP</li>
+				<li>Associative Arrays</li>
+			</ol>
+			<h2>Associative Arrays</h2>
+			<h3>Review</h3>
+			<p>You learned so much in this lesson! Let’s review:</p>
+			<ul>
+				<li><em>Associative arrays</em> are data structures in which string or integer <em>keys</em> are associated with <em>values</em>.</li>
+				<li>We use the => operator to associate a key with its value. $my_array = ["panda"=>"very cute"]</li>
+				<li>To print an array’s keys and their values, we can use the print_r() function.</li>
+				<li>We access the value associated with a given key by using square brackets ([]). For example: $my_array["panda"] will return "very cute".</li>
+				<li>We can assign values to keys using this same indexing syntax and the assignment operator (=): $my_array["dog"] = "good cuteness";</li>
+				<li>This same syntax can be used to change existing elements. $my_array["dog"] = "max cuteness";</li>
+				<li>We can remove a <em>key=>value</em> pair entirely using the PHP unset() function.</li>
+				<li>Keys can be integers. In fact, ordered arrays are just arrays in which integer keys have been assigned to the values automatically.</li>
+				<li>In PHP, associative arrays and ordered arrays are different uses of the same data type.</li>
+				<li>The union (+) operator takes two array operands and returns a new array with any unique keys from the second array appended to the first array.</li>
+				<li>When writing function with array parameters, we can pass the array by value or by reference depending on our intent.</li>
+			</ul>
+			<p>Awesome work!</p>
 		</div>
+
+		<footer>
+			<div class="container">
+				<hr>
+				<div id="today"></div>
+			</div>
+		</footer>
 	</body>	
 </html>
