update html tags

--- a/css-course/typography.html
+++ b/css-course/typography.html
@@ -156,7 +156,7 @@
 				<li>The vertical spacing between lines of text can be modified with the line-height property.</li>
 				<li>Serif fonts have extra details on the ends of each letter. Sans-Serif fonts do not.</li>
 				<li>Fallback fonts are used when a certain font is not installed on a user's computer.</li>
-				<li>Google Fonts provides free fonts that can be used in an HTML file with the (link) tag or the @font-face property.</li>
+				<li>Google Fonts provides free fonts that can be used in an HTML file with the < link > tag or the @font-face property.</li>
 				<li>Local fonts can be added to a document with the @font-face property and the path to the font's source.</li>
 				<li>The word-spacing property changes how far apart individual words are.</li>
 				<li>The letter-spacing property changes how far apart individual letters are.</li>
