--- a/html-course/introduction.html
+++ b/html-course/introduction.html
@@ -153,13 +153,13 @@
 				<li>HTML stands for HyperText Markup Language and is used to create the structure and content of a webpage.</li>
 				<li>Most HTML elements contain opening and closing tags with raw text or other HTML tags between them.</li>
 				<li>HTML elements can be nested inside other elements. The enclosed element is the child of the enclosing parent element.</li>
-				<li>Any visible content should be placed within the opening and closing (body) tags.</li>
-				<li>Headings and sub-headings, (h1) to (h6) tags, are used to enlarge text.</li>
-				<li>(p), (span) and (div) tags specify text or blocks.</li>
-				<li>The (em) and (strong) tags are used to emphasize text.</li>
-				<li>Line breaks are created with the (br) tag.</li>
-				<li>Ordered lists (ol) are numbered and unordered lists (ul) are bulleted.</li>
-				<li>Images (img) and videos (video) can be added by linking to an existing source.</li>
+				<li>Any visible content should be placed within the opening and closing < body > tags.</li>
+				<li>Headings and sub-headings, < h1 > to < h6 > tags, are used to enlarge text.</li>
+				<li>< p >, < span > and < div > tags specify text or blocks.</li>
+				<li>The < em > and < strong > tags are used to emphasize text.</li>
+				<li>Line breaks are created with the < br > tag.</li>
+				<li>Ordered lists < ol > are numbered and unordered lists < ul > are bulleted.</li>
+				<li>Images < img > and videos < video > can be added by linking to an existing source.</li>
 			</ol>
 			<p>In the next lesson, we'll take the content that you've added to this website and transform it into an HTML document that's ready to go on the web!</p>
 		</div>
