--- a/html-course/tables.html
+++ b/html-course/tables.html
@@ -150,16 +150,16 @@
 			<p>Great job! In this lesson, you learned how to create a table, add data to it, and section the table into smaller parts that make it easier to read.</p>
 			<p>Let's review what you've learned so far:</p>
 			<ol>
-				<li>The (table) element creates a table.</li>
-				<li>The (tr) element adds rows to a table.</li>
-				<li>To add data to a row, you can use the (td) element.</li>
-				<li>Table headings clarify the meaning of data. Headings are added with the (th) element.</li>
+				<li>The < table > element creates a table.</li>
+				<li>The < tr > element adds rows to a table.</li>
+				<li>To add data to a row, you can use the < td > element.</li>
+				<li>Table headings clarify the meaning of data. Headings are added with the < th > element.</li>
 				<li>Table data can span columns using the colspan attribute.</li>
 				<li>Table data can span rows using the rowspan attribute.</li>
 				<li>Tables can be split into three main sections: a head, a body, and a footer.</li>
-				<li>A table's head is created with the (thead) element.</li>
-				<li>A table's body is created with the (tbody) element.</li>
-				<li>A table's footer is created with the (tfoot) element.</li>
+				<li>A table's head is created with the < thead > element.</li>
+				<li>A table's body is created with the < tbody > element.</li>
+				<li>A table's footer is created with the < tfoot > element.</li>
 				<li>All the CSS properties you learned about in this course can be applied to tables and their data.</li>
 			</ol>
 			<p>Congratulations on completing HTML Tables!</p>
