--- a/html-course/standards.html
+++ b/html-course/standards.html
@@ -151,16 +151,16 @@
 			<p>While some tags have a very specific purpose, such as image and video tags, most tags are used to describe the content that they surround, which helps us modify and style our content later. There are seemingly infinite numbers of tags to use (many more than we've taught). Knowing when to use each one is based on how you want to describe the content of your HTML. Descriptive, well-chosen tags are one key to high-quality web development. A full list of available HTML tags can be found in Mozilla documentation.</a></p>
 			<p>Let’s review what you’ve learned this lesson:</p>
 			<ol>
-				<li>The (!DOCTYPE html) declaration should always be the first line of code in your HTML files. This lets the browser know what version of HTML to expect.</li>
-				<li>The (html) element will contain all of your HTML code.</li>
-				<li>Information about the web page, like the title, belongs within the (head) of the page.</li>
-				<li>You can add a title to your web page by using the (title) element, inside of the head.</li>
+				<li>The < !DOCTYPE html > declaration should always be the first line of code in your HTML files. This lets the browser know what version of HTML to expect.</li>
+				<li>The < html > element will contain all of your HTML code.</li>
+				<li>Information about the web page, like the title, belongs within the < head > of the page.</li>
+				<li>You can add a title to your web page by using the < title > element, inside of the head.</li>
 				<li>A webpage's title appears in a browser's tab.</li>
-				<li>Anchor tags (a) are used to link to internal pages, external pages or content on the same page.</li>
-				<li>You can create sections on a webpage and jump to them using (a) tags and adding ids to the elements you wish to jump to.</li>
+				<li>Anchor tags < a > are used to link to internal pages, external pages or content on the same page.</li>
+				<li>You can create sections on a webpage and jump to them using < a > tags and adding ids to the elements you wish to jump to.</li>
 				<li>Whitespace between HTML elements helps make code easier to read while not changing how elements appear in the browser.</li>
 				<li>Indentation also helps make code easier to read. It makes parent-child relationships visible.</li>
-				<li>Comments are written in HTML using the following syntax: (!-- comment --).</li>
+				<li>Comments are written in HTML using the following syntax: < !-- comment -- >.</li>
 			</ol>
 			<p>Take some time to edit the workspace you created and observe how it changes!</p>
 		</div>
